--- a/vscode/package.json
+++ b/vscode/package.json
@@ -2,7 +2,7 @@
 	"name": "vscode-markuplint",
 	"displayName": "Markuplint",
 	"description": "Markuplint for VS Code",
-	"version": "3.7.0",
+	"version": "4.0.0-alpha.0",
 	"publisher": "yusukehirao",
 	"license": "MIT",
 	"private": true,
@@ -92,9 +92,10 @@
 		"typescript": "^5.1.6"
 	},
 	"dependencies": {
+		"@markuplint/esm-adapter": "4.0.0-alpha.0",
 		"@markuplint/i18n": "3.9.0",
 		"@markuplint/ml-spec": "3.11.0",
-		"markuplint": "3.12.0",
+		"markuplint": "4.0.0-alpha.0",
 		"semver": "^7.5.4",
 		"vscode-languageclient": "^8.1.0",
 		"vscode-languageserver": "^8.1.0",
