--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -49,6 +49,7 @@
 			"url": "/packages/@markuplint/i18n/$schema.json"
 		}
 	],
+	"vitest.include": ["**/*.spec.ts"],
 	"github.copilot.enable": {
 		"*": true
 	}
