--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
 		"build": "lerna run build",
 		"clean": "lerna run clean",
 		"dev": "lerna run --parallel dev",
-		"test": "jest --coverage",
+		"test": "vitest run",
 		"test:coverage": "jest --useStderr --coverage && cat ./coverage/lcov.info | coveralls",
 		"test:clear": "jest --clearCache",
 		"test:unit": "jest",
@@ -98,6 +98,7 @@
 		"@types/jest": "^29.5.2",
 		"@typescript-eslint/eslint-plugin": "^5.61.0",
 		"@typescript-eslint/parser": "^5.61.0",
+		"@vitest/coverage-v8": "^0.33.0",
 		"cspell": "^6.31.1",
 		"eslint": "^8.44.0",
 		"eslint-import-resolver-typescript": "^3.5.5",
@@ -122,6 +123,7 @@
 		"typedoc": "^0.24.8",
 		"typedoc-plugin-mdn-links": "^3.0.3",
 		"typedoc-plugin-resolve-crossmodule-references": "^0.3.3",
-		"typescript": "^5.1.6"
+		"typescript": "^5.1.6",
+		"vitest": "^0.33.0"
 	}
 }
