Ignore tests of `esm-adapter` from Jest.

--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
 				"displayName": "node",
 				"testRegex": "(\\.|/)spec\\.js$",
 				"testPathIgnorePatterns": [
+					"esm-adapter",
 					"scaffold",
 					"(\\.|/)browser\\.spec\\.js$"
 				],
