--- a/package.json
+++ b/package.json
@@ -124,7 +124,6 @@
 		"typedoc": "^0.24.8",
 		"typedoc-plugin-mdn-links": "^3.0.3",
 		"typedoc-plugin-resolve-crossmodule-references": "^0.3.3",
-		"typescript": "^5.1.6",
-		"vitest": "^0.33.0"
+		"typescript": "^5.1.6"
 	}
 }
