--- a/packages/@markuplint/file-resolver/tsconfig.json
+++ b/packages/@markuplint/file-resolver/tsconfig.json
@@ -1,6 +1,8 @@
 {
 	"extends": "../../../tsconfig.json",
 	"compilerOptions": {
+		"module": "NodeNext",
+		"target": "ES2020",
 		"composite": true,
 		"outDir": "./lib",
 		"rootDir": "./src"
