--- a/packages/markuplint/package.json
+++ b/packages/markuplint/package.json
@@ -25,7 +25,7 @@
 		"clean": "tsc --build --clean"
 	},
 	"dependencies": {
-		"@markuplint/create-rule-helper": "3.12.0",
+		"@markuplint/create-rule-helper": "4.0.0-alpha.0",
 		"@markuplint/file-resolver": "4.0.0-alpha.0",
 		"@markuplint/html-parser": "3.10.0",
 		"@markuplint/html-spec": "3.11.0",
