--- a/packages/@markuplint/rules/package.json
+++ b/packages/@markuplint/rules/package.json
@@ -26,7 +26,7 @@
 	},
 	"dependencies": {
 		"@markuplint/html-spec": "3.11.0",
-		"@markuplint/ml-core": "3.12.0",
+		"@markuplint/ml-core": "4.0.0-alpha.0",
 		"@markuplint/ml-spec": "3.11.0",
 		"@markuplint/selector": "3.11.0",
 		"@markuplint/shared": "3.8.0",
