--- a/packages/@markuplint/create-rule-helper/package.json
+++ b/packages/@markuplint/create-rule-helper/package.json
@@ -22,7 +22,7 @@
 		"clean": "tsc --build --clean"
 	},
 	"dependencies": {
-		"@markuplint/ml-core": "3.12.0",
+		"@markuplint/ml-core": "4.0.0-alpha.0",
 		"glob": "^10.3.2",
 		"prettier": "^2.8.8",
 		"ts-node": "^10.9.1",
