--- a/packages/@markuplint/file-resolver/package.json
+++ b/packages/@markuplint/file-resolver/package.json
@@ -30,7 +30,7 @@
 		"@markuplint/html-parser": "3.10.0",
 		"@markuplint/ml-ast": "3.2.0",
 		"@markuplint/ml-config": "3.11.0",
-		"@markuplint/ml-core": "3.12.0",
+		"@markuplint/ml-core": "4.0.0-alpha.0",
 		"@markuplint/ml-spec": "3.11.0",
 		"@markuplint/parser-utils": "3.10.0",
 		"@markuplint/selector": "3.11.0",
