--- a/packages/markuplint/package.json
+++ b/packages/markuplint/package.json
@@ -32,7 +32,7 @@
 		"@markuplint/i18n": "3.9.0",
 		"@markuplint/ml-ast": "3.2.0",
 		"@markuplint/ml-config": "3.11.0",
-		"@markuplint/ml-core": "3.12.0",
+		"@markuplint/ml-core": "4.0.0-alpha.0",
 		"@markuplint/ml-spec": "3.11.0",
 		"@markuplint/rules": "4.0.0-alpha.0",
 		"@markuplint/shared": "3.8.0",
