--- a/packages/@markuplint/ml-core/package.json
+++ b/packages/@markuplint/ml-core/package.json
@@ -30,7 +30,7 @@
 	"dependencies": {
 		"@markuplint/config-presets": "3.8.0",
 		"@markuplint/html-parser": "3.10.0",
-		"@markuplint/html-spec": "3.11.0",
+		"@markuplint/html-spec": "4.0.0-alpha.0",
 		"@markuplint/i18n": "3.9.0",
 		"@markuplint/ml-ast": "3.2.0",
 		"@markuplint/ml-config": "3.11.0",
