Update `@markuplint/parser-utils` to ESM.

--- a/packages/@markuplint/html-parser/package.json
+++ b/packages/@markuplint/html-parser/package.json
@@ -26,7 +26,7 @@
 	},
 	"dependencies": {
 		"@markuplint/ml-ast": "3.2.0",
-		"@markuplint/parser-utils": "3.10.0",
+		"@markuplint/parser-utils": "4.0.0-alpha.0",
 		"parse5": "7.1.2",
 		"tslib": "^2.6.0",
 		"type-fest": "^4.0.0"
