--- a/packages/@markuplint/astro-parser/package.json
+++ b/packages/@markuplint/astro-parser/package.json
@@ -24,7 +24,7 @@
 		"@astrojs/parser": "0.22.2",
 		"@markuplint/html-parser": "4.0.0-alpha.0",
 		"@markuplint/ml-ast": "3.2.0",
-		"@markuplint/parser-utils": "3.10.0",
+		"@markuplint/parser-utils": "4.0.0-alpha.0",
 		"astro-eslint-parser": "^0.14.0",
 		"tslib": "^2.6.0"
 	}
