--- a/packages/@markuplint/ejs-parser/package.json
+++ b/packages/@markuplint/ejs-parser/package.json
@@ -23,6 +23,6 @@
 	"dependencies": {
 		"@markuplint/html-parser": "4.0.0-alpha.0",
 		"@markuplint/ml-ast": "3.2.0",
-		"@markuplint/parser-utils": "3.10.0"
+		"@markuplint/parser-utils": "4.0.0-alpha.0"
 	}
 }
