--- a/packages/@markuplint/file-resolver/package.json
+++ b/packages/@markuplint/file-resolver/package.json
@@ -32,7 +32,7 @@
 		"@markuplint/ml-config": "3.11.0",
 		"@markuplint/ml-core": "4.0.0-alpha.0",
 		"@markuplint/ml-spec": "3.11.0",
-		"@markuplint/parser-utils": "3.10.0",
+		"@markuplint/parser-utils": "4.0.0-alpha.0",
 		"@markuplint/selector": "3.11.0",
 		"@markuplint/shared": "3.8.0",
 		"cosmiconfig": "^8.2.0",
