--- a/packages/@markuplint/jsx-parser/package.json
+++ b/packages/@markuplint/jsx-parser/package.json
@@ -23,7 +23,7 @@
 	"dependencies": {
 		"@markuplint/html-parser": "4.0.0-alpha.0",
 		"@markuplint/ml-ast": "3.2.0",
-		"@markuplint/parser-utils": "3.10.0",
+		"@markuplint/parser-utils": "4.0.0-alpha.0",
 		"@typescript-eslint/types": "^5.61.0",
 		"@typescript-eslint/typescript-estree": "^5.61.0",
 		"tslib": "^2.6.0"
