--- a/packages/@markuplint/ml-spec/package.json
+++ b/packages/@markuplint/ml-spec/package.json
@@ -26,7 +26,7 @@
 	},
 	"dependencies": {
 		"@markuplint/ml-ast": "3.2.0",
-		"@markuplint/types": "3.9.0",
+		"@markuplint/types": "4.0.0-alpha.0",
 		"dom-accessibility-api": "^0.6.1",
 		"is-plain-object": "^5.0.0",
 		"tslib": "^2.6.0",
