--- a/packages/@markuplint/parser-utils/package.json
+++ b/packages/@markuplint/parser-utils/package.json
@@ -25,7 +25,7 @@
 	},
 	"dependencies": {
 		"@markuplint/ml-ast": "3.2.0",
-		"@markuplint/types": "3.9.0",
+		"@markuplint/types": "4.0.0-alpha.0",
 		"@types/uuid": "^9.0.2",
 		"tslib": "^2.6.0",
 		"type-fest": "^4.0.0",
