--- a/packages/@markuplint/rules/package.json
+++ b/packages/@markuplint/rules/package.json
@@ -30,7 +30,7 @@
 		"@markuplint/ml-spec": "3.11.0",
 		"@markuplint/selector": "3.11.0",
 		"@markuplint/shared": "3.8.0",
-		"@markuplint/types": "3.9.0",
+		"@markuplint/types": "4.0.0-alpha.0",
 		"@types/debug": "^4.1.8",
 		"@ungap/structured-clone": "^1.2.0",
 		"ansi-colors": "^4.1.3",
