--- a/packages/@markuplint/file-resolver/package.json
+++ b/packages/@markuplint/file-resolver/package.json
@@ -33,7 +33,7 @@
 		"@markuplint/ml-core": "4.0.0-alpha.0",
 		"@markuplint/ml-spec": "3.11.0",
 		"@markuplint/parser-utils": "4.0.0-alpha.0",
-		"@markuplint/selector": "3.11.0",
+		"@markuplint/selector": "4.0.0-alpha.0",
 		"@markuplint/shared": "3.8.0",
 		"cosmiconfig": "^8.2.0",
 		"cosmiconfig-typescript-loader": "^4.3.0",
