--- a/packages/@markuplint/ml-core/package.json
+++ b/packages/@markuplint/ml-core/package.json
@@ -36,7 +36,7 @@
 		"@markuplint/ml-config": "3.11.0",
 		"@markuplint/ml-spec": "3.11.0",
 		"@markuplint/parser-utils": "4.0.0-alpha.0",
-		"@markuplint/selector": "3.11.0",
+		"@markuplint/selector": "4.0.0-alpha.0",
 		"@types/debug": "^4.1.8",
 		"debug": "^4.3.4",
 		"is-plain-object": "^5.0.0",
