--- a/packages/@markuplint/rules/package.json
+++ b/packages/@markuplint/rules/package.json
@@ -28,7 +28,7 @@
 		"@markuplint/html-spec": "4.0.0-alpha.0",
 		"@markuplint/ml-core": "4.0.0-alpha.0",
 		"@markuplint/ml-spec": "3.11.0",
-		"@markuplint/selector": "3.11.0",
+		"@markuplint/selector": "4.0.0-alpha.0",
 		"@markuplint/shared": "3.8.0",
 		"@markuplint/types": "4.0.0-alpha.0",
 		"@types/debug": "^4.1.8",
