--- a/packages/@markuplint/ml-core/package.json
+++ b/packages/@markuplint/ml-core/package.json
@@ -34,7 +34,7 @@
 		"@markuplint/i18n": "4.0.0-alpha.0",
 		"@markuplint/ml-ast": "3.2.0",
 		"@markuplint/ml-config": "3.11.0",
-		"@markuplint/ml-spec": "3.11.0",
+		"@markuplint/ml-spec": "4.0.0-alpha.0",
 		"@markuplint/parser-utils": "4.0.0-alpha.0",
 		"@markuplint/selector": "4.0.0-alpha.0",
 		"@types/debug": "^4.1.8",
