--- a/packages/markuplint/package.json
+++ b/packages/markuplint/package.json
@@ -35,7 +35,7 @@
 		"@markuplint/ml-core": "4.0.0-alpha.0",
 		"@markuplint/ml-spec": "4.0.0-alpha.0",
 		"@markuplint/rules": "4.0.0-alpha.0",
-		"@markuplint/shared": "3.8.0",
+		"@markuplint/shared": "4.0.0-alpha.0",
 		"@types/cli-color": "^2.0.2",
 		"@types/debug": "^4.1.8",
 		"@types/has-yarn": "^1.0.1",
