--- a/packages/@markuplint/ml-config/package.json
+++ b/packages/@markuplint/ml-config/package.json
@@ -21,7 +21,7 @@
 	"dependencies": {
 		"@markuplint/ml-ast": "3.2.0",
 		"@markuplint/selector": "4.0.0-alpha.0",
-		"@markuplint/shared": "3.8.0",
+		"@markuplint/shared": "4.0.0-alpha.0",
 		"@types/mustache": "^4.2.2",
 		"deepmerge": "^4.3.1",
 		"is-plain-object": "^5.0.0",
