--- a/packages/markuplint/package.json
+++ b/packages/markuplint/package.json
@@ -31,7 +31,7 @@
 		"@markuplint/html-spec": "4.0.0-alpha.0",
 		"@markuplint/i18n": "4.0.0-alpha.0",
 		"@markuplint/ml-ast": "3.2.0",
-		"@markuplint/ml-config": "3.11.0",
+		"@markuplint/ml-config": "4.0.0-alpha.0",
 		"@markuplint/ml-core": "4.0.0-alpha.0",
 		"@markuplint/ml-spec": "4.0.0-alpha.0",
 		"@markuplint/rules": "4.0.0-alpha.0",
