--- a/packages/@markuplint/file-resolver/package.json
+++ b/packages/@markuplint/file-resolver/package.json
@@ -29,7 +29,7 @@
 	"dependencies": {
 		"@markuplint/html-parser": "4.0.0-alpha.0",
 		"@markuplint/ml-ast": "3.2.0",
-		"@markuplint/ml-config": "3.11.0",
+		"@markuplint/ml-config": "4.0.0-alpha.0",
 		"@markuplint/ml-core": "4.0.0-alpha.0",
 		"@markuplint/ml-spec": "4.0.0-alpha.0",
 		"@markuplint/parser-utils": "4.0.0-alpha.0",
