--- a/packages/@markuplint/spec-generator/package.json
+++ b/packages/@markuplint/spec-generator/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@markuplint/spec-generator",
-	"version": "3.11.0",
+	"version": "4.0.0-alpha.0",
 	"description": "Generates @markuplint/ml-spec",
 	"repository": "git@github.com:markuplint/markuplint.git",
 	"author": "Yusuke Hirao <yusukehirao@me.com>",
