--- a/packages/@markuplint/ml-spec/package.json
+++ b/packages/@markuplint/ml-spec/package.json
@@ -38,7 +38,7 @@
 		"type-fest": "^4.0.0"
 	},
 	"devDependencies": {
-		"@markuplint/test-tools": "3.6.0",
+		"@markuplint/test-tools": "4.0.0-alpha.0",
 		"json-schema-to-typescript": "13.0.2"
 	}
 }
