--- a/packages/@markuplint/spec-generator/package.json
+++ b/packages/@markuplint/spec-generator/package.json
@@ -23,7 +23,7 @@
 	"devDependencies": {
 		"@markuplint/html-spec": "4.0.0-alpha.0",
 		"@markuplint/ml-spec": "4.0.0-alpha.0",
-		"@markuplint/test-tools": "3.6.0",
+		"@markuplint/test-tools": "4.0.0-alpha.0",
 		"@types/cheerio": "^0.22.31",
 		"@types/cli-progress": "^3.11.0",
 		"@types/node-fetch": "^2.6.4",
