Tidy up `vitest.config.ts`

--- a/.eslintrc
+++ b/.eslintrc
@@ -158,7 +158,7 @@
 			}
 		},
 		{
-			"files": ["**/*.spec.{js,mjs,cjs,ts}"],
+			"files": ["**/*.spec.{js,mjs,cjs,ts}", "vitest.config.ts"],
 			"rules": {
 				"import/no-extraneous-dependencies": 0,
 				"@typescript-eslint/no-var-requires": 0
