--- a/packages/@markuplint/file-resolver/package.json
+++ b/packages/@markuplint/file-resolver/package.json
@@ -28,7 +28,7 @@
 	},
 	"dependencies": {
 		"@markuplint/html-parser": "4.0.0-alpha.0",
-		"@markuplint/ml-ast": "3.2.0",
+		"@markuplint/ml-ast": "4.0.0-alpha.0",
 		"@markuplint/ml-config": "4.0.0-alpha.0",
 		"@markuplint/ml-core": "4.0.0-alpha.0",
 		"@markuplint/ml-spec": "4.0.0-alpha.0",
