--- a/packages/@markuplint/html-parser/package.json
+++ b/packages/@markuplint/html-parser/package.json
@@ -25,7 +25,7 @@
 		"clean": "tsc --build --clean"
 	},
 	"dependencies": {
-		"@markuplint/ml-ast": "3.2.0",
+		"@markuplint/ml-ast": "4.0.0-alpha.0",
 		"@markuplint/parser-utils": "4.0.0-alpha.0",
 		"parse5": "7.1.2",
 		"tslib": "^2.6.0",
