--- a/packages/@markuplint/ml-ast/package.json
+++ b/packages/@markuplint/ml-ast/package.json
@@ -1,12 +1,17 @@
 {
 	"name": "@markuplint/ml-ast",
-	"version": "3.2.0",
+	"version": "4.0.0-alpha.0",
 	"description": "The markuplint AST types.",
 	"repository": "git@github.com:markuplint/markuplint.git",
 	"author": "Yusuke Hirao <yusukehirao@me.com>",
 	"license": "MIT",
 	"private": false,
-	"main": "lib/index.js",
+	"type": "module",
+	"exports": {
+		".": {
+			"import": "./lib/index.js"
+		}
+	},
 	"types": "lib/index.d.ts",
 	"publishConfig": {
 		"access": "public"
