--- a/packages/@markuplint/ml-core/package.json
+++ b/packages/@markuplint/ml-core/package.json
@@ -32,7 +32,7 @@
 		"@markuplint/html-parser": "4.0.0-alpha.0",
 		"@markuplint/html-spec": "4.0.0-alpha.0",
 		"@markuplint/i18n": "4.0.0-alpha.0",
-		"@markuplint/ml-ast": "3.2.0",
+		"@markuplint/ml-ast": "4.0.0-alpha.0",
 		"@markuplint/ml-config": "4.0.0-alpha.0",
 		"@markuplint/ml-spec": "4.0.0-alpha.0",
 		"@markuplint/parser-utils": "4.0.0-alpha.0",
