--- a/packages/@markuplint/ml-spec/package.json
+++ b/packages/@markuplint/ml-spec/package.json
@@ -30,7 +30,7 @@
 		"schema": "run-s schema:*"
 	},
 	"dependencies": {
-		"@markuplint/ml-ast": "3.2.0",
+		"@markuplint/ml-ast": "4.0.0-alpha.0",
 		"@markuplint/types": "4.0.0-alpha.0",
 		"dom-accessibility-api": "^0.6.1",
 		"is-plain-object": "^5.0.0",
