--- a/packages/@markuplint/parser-utils/package.json
+++ b/packages/@markuplint/parser-utils/package.json
@@ -24,7 +24,7 @@
 		"clean": "tsc --build --clean"
 	},
 	"dependencies": {
-		"@markuplint/ml-ast": "3.2.0",
+		"@markuplint/ml-ast": "4.0.0-alpha.0",
 		"@markuplint/types": "4.0.0-alpha.0",
 		"@types/uuid": "^9.0.2",
 		"tslib": "^2.6.0",
