--- a/packages/@markuplint/svelte-parser/package.json
+++ b/packages/@markuplint/svelte-parser/package.json
@@ -22,7 +22,7 @@
 	},
 	"dependencies": {
 		"@markuplint/html-parser": "4.0.0-alpha.0",
-		"@markuplint/ml-ast": "3.2.0",
+		"@markuplint/ml-ast": "4.0.0-alpha.0",
 		"@markuplint/parser-utils": "4.0.0-alpha.0",
 		"svelte": "^4.0.5",
 		"tslib": "^2.6.0"
