--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
 	"compilerOptions": {
-		"module": "commonjs",
-		"target": "es2019",
+		"module": "NodeNext",
+		"target": "ES2020",
 		"strict": true,
 		"strictNullChecks": true,
 		"strictPropertyInitialization": true,
