--- a/packages/@markuplint/vue-spec/package.json
+++ b/packages/@markuplint/vue-spec/package.json
@@ -1,12 +1,17 @@
 {
 	"name": "@markuplint/vue-spec",
-	"version": "3.10.0",
+	"version": "4.0.0-alpha.0",
 	"description": "Extended specification for tags and attributes in Vue",
 	"repository": "git@github.com:markuplint/markuplint.git",
 	"author": "Yusuke Hirao <yusukehirao@me.com>",
 	"license": "MIT",
 	"private": false,
-	"main": "lib/index.js",
+	"type": "module",
+	"exports": {
+		".": {
+			"import": "./lib/index.js"
+		}
+	},
 	"types": "lib/index.d.ts",
 	"publishConfig": {
 		"access": "public"
@@ -19,6 +24,6 @@
 		"@markuplint/ml-spec": "4.0.0-alpha.0"
 	},
 	"peerDependencies": {
-		"@markuplint/ml-core": ">=3.x"
+		"@markuplint/ml-core": ">4"
 	}
 }
