Fix linting and formatting.

--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
 		"test": "vitest run",
 		"test:coverage": "vitest run --coverage",
 		"test:heapdump": "node --expose-gc ./heaptest/index.js",
-		"lint": "eslint --fix './packages/**/{*.ts,*.spec.js}'; yarn spellcheck; prettier --write './packages/**/{*.{ts,tsx,json,rc,md},*.spec.js}';",
-		"lint:check": "eslint './packages/**/{*.ts,*.spec.js}' && yarn spellcheck && prettier --check './packages/**/{*.{ts,tsx,json,rc,md},*.spec.js}'",
+		"lint": "eslint --fix './packages/**/*.ts'; yarn spellcheck; prettier --write './packages/**/*.{ts,tsx,js,cjs,mjs,json,rc,md}';",
+		"lint:check": "eslint './packages/**/*.ts' && yarn spellcheck && prettier --check './packages/**/*.{ts,tsx,js,cjs,mjs,json,rc,md}'",
 		"ga": "actionlint .github/workflows/*.yml",
 		"schema": "lerna run schema",
 		"gen": "cd packages/\\@markuplint/html-spec/; yarn gen; cd ../",
@@ -18,7 +18,7 @@
 		"check:build": "find . -type f -name \"*.d.ts\" -print | xargs grep \"packages/@markuplint\"",
 		"cli": "./packages/markuplint/bin/markuplint.mjs",
 		"vscode:dev": "cd vscode; yarn --ignore-engines vscode:dev",
-		"vscode:lint": "eslint --fix './vscode/**/*.ts'; yarn spellcheck; prettier --write './vscode/**/*{ts,tsx,json,rc,md}';",
+		"vscode:lint": "eslint --fix './vscode/**/*.ts'; yarn spellcheck; prettier --write './vscode/**/*{ts,tsx,js,cjs,mjs,json,rc,md}';",
 		"vscode:login": "cd vscode; yarn --ignore-engines vscode:login",
 		"vscode:package": "cp package.json package.json.bak; jq '.workspaces |= map(select(. != \"vscode\"))' package.json > package.json.tmp && mv package.json.tmp package.json; cd vscode; rm -rf node_modules; npm install; npm run vscode:package; cd ..; mv package.json.bak package.json;",
 		"vscode:release": "cp package.json package.json.bak; jq '.workspaces |= map(select(. != \"vscode\"))' package.json > package.json.tmp && mv package.json.tmp package.json; cd vscode; rm -rf node_modules; npm install; npm run vscode:release; cd ..; mv package.json.bak package.json;",
@@ -38,7 +38,7 @@
 		"up": "yarn upgrade-interactive --latest"
 	},
 	"lint-staged": {
-		"./{packages,website,playground}/**/*.{ts,tsx,json}": [
+		"./{packages,website,playground}/**/*.{ts,tsx,js,cjs,mjs,json}": [
 			"prettier --write"
 		],
 		"./{packages,website,playground}/**/*.{ts,tsx}": [
