--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -128,6 +128,17 @@ jobs:
                   path: '**/node_modules'
                   key: dev-depends-${{ matrix.os }}-node${{ env.NODE_BUILD_VERSION }}-${{ hashFiles('yarn.lock') }}
 
+            - name: Cache Restore Production
+              id: cache-restore-prod
+              uses: actions/cache/restore@v3
+              with:
+                  path: |
+                      packages/**/lib
+                      packages/@markuplint/config-presets/preset.*.json
+                      packages/@markuplint/html-spec/index.js
+                      packages/@markuplint/html-spec/index.json
+                  key: prod-node${{ env.NODE_BUILD_VERSION }}-${{ github.sha }}
+
             - name: Lint
               run: yarn lint:check
 
