--- a/packages/@markuplint/create-rule-helper/package.json
+++ b/packages/@markuplint/create-rule-helper/package.json
@@ -18,11 +18,11 @@
 	},
 	"dependencies": {
 		"@markuplint/ml-core": "3.12.0",
-		"glob": "^10.3.2",
-		"prettier": "^2.8.8",
+		"glob": "^10.3.4",
+		"prettier": "2",
 		"ts-node": "^10.9.1",
-		"tslib": "^2.6.0",
-		"typescript": "^5.1.6"
+		"tslib": "^2.6.2",
+		"typescript": "^5.2.2"
 	},
 	"devDependencies": {
 		"@types/fs-extra": "^11.0.1",
