--- a/packages/@markuplint/jsx-parser/package.json
+++ b/packages/@markuplint/jsx-parser/package.json
@@ -19,8 +19,8 @@
 		"@markuplint/html-parser": "3.10.0",
 		"@markuplint/ml-ast": "3.2.0",
 		"@markuplint/parser-utils": "3.10.0",
-		"@typescript-eslint/types": "^5.61.0",
-		"@typescript-eslint/typescript-estree": "^5.61.0",
-		"tslib": "^2.6.0"
+		"@typescript-eslint/types": "5",
+		"@typescript-eslint/typescript-estree": "5",
+		"tslib": "^2.6.2"
 	}
 }
