--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -246,6 +246,9 @@ jobs:
                   ls -la ./packages/@markuplint/config-presets
               shell: bash
 
+            - name: Add modules that needs test
+              run: yarn add -D execa --ignore-engines
+
             - name: Test
               uses: nick-fields/retry@v2
               with:
