--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
 		"lint-staged": "^14.0.1",
 		"npm-run-all": "^4.1.5",
 		"prettier": "^3.0.3",
+		"string-width": "4",
 		"textlint": "13.3.3",
 		"textlint-filter-rule-comments": "^1.2.2",
 		"textlint-rule-preset-ja-spacing": "^2.3.0",
@@ -87,6 +88,11 @@
 		"typedoc": "^0.25.1",
 		"typedoc-plugin-mdn-links": "^3.1.0",
 		"typedoc-plugin-resolve-crossmodule-references": "^0.3.3",
-		"typescript": "^5.2.2"
+		"typescript": "^5.2.2",
+		"wrap-ansi": "7"
+	},
+	"resolutions": {
+		"lerna/**/string-width": "4",
+		"lerna/**/wrap-ansi": "7"
 	}
 }
