--- a/playground/package.json
+++ b/playground/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@markuplint/playground",
-	"version": "4.0.0",
+	"version": "4.0.0-alpha.0",
 	"private": true,
 	"type": "module",
 	"scripts": {
