--- a/packages/@markuplint/esm-adapter/package.json
+++ b/packages/@markuplint/esm-adapter/package.json
@@ -14,11 +14,18 @@
 	"publishConfig": {
 		"access": "public"
 	},
+	"scripts": {},
 	"dependencies": {
-		"strict-event-emitter": "^0.5.1"
+		"debug": "^4.3.4",
+		"strict-event-emitter": "^0.5.1",
+		"default-markuplint": "npm:markuplint@4.0.0-alpha.2",
+		"latest-markuplint-ml-spec": "npm:@markuplint/ml-spec@4.0.0-alpha.2"
+	},
+	"devDependencies": {
+		"@types/debug": "^4.1.9",
+		"test-markuplint": "npm:markuplint@4.0.0-alpha.1"
 	},
 	"peerDependencies": {
-		"markuplint": "4.0.0-alpha.2"
-	},
-	"scripts": {}
+		"markuplint": "^4.0.0-alpha.2"
+	}
 }
