--- a/vscode/.eslintrc
+++ b/vscode/.eslintrc
@@ -3,6 +3,9 @@
 	"globals": {
 		"NodeJS": true
 	},
+	"rules": {
+		"no-restricted-globals": 0
+	},
 	"overrides": [
 		{
 			"files": ["./src/server/v1.ts", "./src/server/v2.ts"],
