--- a/vscode/package.json
+++ b/vscode/package.json
@@ -93,10 +93,11 @@
 	},
 	"dependencies": {
 		"@markuplint/esm-adapter": "4.0.0-alpha.2",
+		"debug": "^4.3.4",
+		"markuplint": "4.0.0-alpha.2",
 		"semver": "7.5.4",
 		"vscode-languageclient": "9.0.1",
-		"vscode-languageserver": "9.0.1",
 		"vscode-languageserver-textdocument": "1.0.11",
-		"vscode-default-markuplint": "npm:markuplint@4.0.0-alpha.2"
+		"vscode-languageserver": "9.0.1"
 	}
 }
