--- a/vscode/package.json
+++ b/vscode/package.json
@@ -2,7 +2,7 @@
 	"name": "vscode-markuplint",
 	"displayName": "Markuplint",
 	"description": "Markuplint for VS Code",
-	"version": "4.0.0-alpha.0",
+	"version": "4.0.0-alpha.1",
 	"publisher": "yusukehirao",
 	"license": "MIT",
 	"private": true,
@@ -92,12 +92,12 @@
 		"typescript": "5.2.2"
 	},
 	"dependencies": {
-		"@markuplint/esm-adapter": "4.0.0-alpha.2",
+		"@markuplint/esm-adapter": "4.0.0-alpha.3",
 		"debug": "^4.3.4",
-		"markuplint": "4.0.0-alpha.2",
+		"markuplint": "4.0.0-alpha.3",
 		"semver": "7.5.4",
 		"vscode-languageclient": "9.0.1",
-		"vscode-languageserver-textdocument": "1.0.11",
-		"vscode-languageserver": "9.0.1"
+		"vscode-languageserver": "9.0.1",
+		"vscode-languageserver-textdocument": "1.0.11"
 	}
 }
