--- a/packages/@markuplint/esm-adapter/package.json
+++ b/packages/@markuplint/esm-adapter/package.json
@@ -17,12 +17,12 @@
 	"scripts": {},
 	"dependencies": {
 		"debug": "^4.3.4",
-		"default-markuplint": "npm:markuplint@4.0.0-alpha.2",
-		"latest-markuplint-ml-spec": "npm:@markuplint/ml-spec@4.0.0-alpha.2",
+		"default-markuplint": "npm:markuplint@next",
+		"latest-markuplint-ml-spec": "npm:@markuplint/ml-spec@next",
 		"strict-event-emitter": "^0.5.1"
 	},
 	"devDependencies": {
 		"@types/debug": "^4.1.9",
-		"test-markuplint": "npm:markuplint@4.0.0-alpha.2"
+		"test-markuplint": "npm:markuplint@next"
 	}
 }
